Fixes and changes for running on JDK 9.