@@ -67,10 +67,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <compilerArgs>
+
+                        <!--
+                            expose internal API for webview debugging
+                        -->
+                        <arg>--add-exports</arg>
+                        <arg>javafx.web/com.sun.javafx.scene.web=ALL-UNNAMED</arg>
+
+                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
